--- a/ling.qmd
+++ b/ling.qmd
@@ -1,4 +1,9 @@
-## A linguagem de programação
+---
+title: "A linguagem de programação"
+number-sections: true
+lang: pt-BR
+---
+
 
 ### Expressões `if-then`
 
