added some projects

--- a/rsa.qmd
+++ b/rsa.qmd
@@ -109,7 +109,7 @@ Repita a computação anterior, mas agora com números maiores. Em vez de trabal
 
 Única coisa que precisa modificar é que a função `NextPrimeInt` não funciona para estes típos de números e precisa usar `NextProbablyPrimeInt`. 
 
-## Geração das chaves
+## Tarefa 3
 
 
 Escreva uma função `RSA_keys( nr_bits )` que gera dados necessários para criptografia RSA usando `nr_bits`. Ou seja, `RSA_keys( nr_bits )` devolve 
