--- a/aliquot.qmd
+++ b/aliquot.qmd
@@ -102,6 +102,9 @@ gap> aliquot_sequence_until_repeat( 34 );
 
 3. O comprimento da sequência é o número de passos que precisamos fazer até a sequência vira periódica. Ache o número entre $1$ e $1000$ que produz o sequência com maior comprimento.
 
+Este projeto foi inspirado pelo seguinte vídeo
+
+{{< video https://youtu.be/OtYKDzXwDEE?si=ye9hrQC-TjHL9W5y width="560" height="315" >}}
 
 <!--
 aliquot_sequence := function( a0, k )
