--- a/centralizers.qmd
+++ b/centralizers.qmd
@@ -20,6 +20,8 @@ Denote por $\mbox{Cent}(G)$ o conjunto de todos os centralizadores de elementos 
 
 Neste projeto, queremos usar o `GAP` para resolver algumas questões para grupos simples finitos.
 
+FAZER UM EXEMPLO PEQUENO S3
+
 ## Tarefa 1
 
 Vamos determinar o centralizador de um elemento em um grupo. Considere o seguinte exemplo.
@@ -42,46 +44,36 @@ Seguindo o exemplo em cima, determine os seguintes centralizadores $C_G(x)$.
 
 ## Tarefa 2 
 
+FAZER EXEMPLO MENOR PRIMEIRO COM LIST E DEPOIS COM SET
+
 Para investigar o problema em cima, nós precisamos determinar o conjunto dos centralizadores em um grupo dado. Vamos fazer esta computação com o grupo $S_5$. 
 
 ```gap
-gap> G := SymmetricGroup( 5 );
-Sym( [ 1 .. 5 ] )
-gap> cents := Set( Elements( G ), x->Centralizer( G, x ));
-[ Group([ (1,5), (2,5), (3,5), (4,5) ]), Group([ (1,2), (3,5), (4,5) ]), 
-  Group([ (2,3), (2,4)(3,5), (4,5) ]), Group([ (1,3), (2,3), (4,5) ]), 
-  Group([ (1,5), (2,3), (4,5) ]), Group([ (1,3), (2,5), (4,5) ]), 
-  Group([ (1,2), (1,4)(2,5), (4,5) ]), Group([ (1,3,2), (4,5) ]), 
-  Group([ (1,3), (1,4)(3,5), (4,5) ]), Group([ (1,5), (2,4), (3,4) ]), 
-  Group([ (2,5), (2,3)(4,5), (3,4) ]), Group([ (1,5), (2,5), (3,4) ]), 
-  Group([ (1,4), (2,5), (3,4) ]), Group([ (1,2), (1,3)(2,4), (3,4) ]), 
-  Group([ (1,2,5), (3,4) ]), Group([ (1,5), (1,3)(4,5), (3,4) ]), 
-  Group([ (1,2), (3,5,4) ]), Group([ (1,4), (2,5), (3,5) ]), 
-  Group([ (2,4), (2,3)(4,5), (3,5) ]), Group([ (1,4), (2,4), (3,5) ]), 
-  Group([ (1,5), (2,4), (3,5) ]), Group([ (1,2), (1,3)(2,5), (3,5) ]), 
-  Group([ (1,2,4), (3,5) ]), Group([ (1,4), (1,3)(4,5), (3,5) ]), 
-  Group([ (1,4), (1,2)(3,4), (2,3) ]), Group([ (1,5), (1,2)(3,5), (2,3) ]), 
-  Group([ (1,4,5), (2,3) ]), Group([ (2,4,3,5) ]), Group([ (1,5), (2,3,4) ]), 
-  Group([ (2,3,4,5) ]), Group([ (2,4,5,3) ]), Group([ (1,4), (2,3,5) ]), 
-  Group([ (1,5), (1,2)(4,5), (2,4) ]), Group([ (1,3), (1,2)(3,4), (2,4) ]), 
-  Group([ (1,5,3), (2,4) ]), Group([ (1,3), (2,4,5) ]), 
-  Group([ (1,4), (1,2)(4,5), (2,5) ]), Group([ (1,3), (1,2)(3,5), (2,5) ]), 
-  Group([ (1,4,3), (2,5) ]), Group([ (1,4,2,5) ]), Group([ (1,4,2,3) ]), 
-  Group([ (1,5,2,3) ]), Group([ (1,4,3,2) ]), Group([ (1,3,5,2,4) ]), 
-  Group([ (1,5,2,4,3) ]), Group([ (1,2,3,5) ]), Group([ (1,2,4,3) ]), 
-  Group([ (1,3,5,4,2) ]), Group([ (1,2,4,5) ]), Group([ (1,5,3,4,2) ]), 
-  Group([ (1,4,2,3,5) ]), Group([ (1,3,5,2) ]), Group([ (1,2,5,4) ]), 
-  Group([ (1,4,3,5,2) ]), Group([ (1,4,3,5) ]), Group([ (1,3,4,5) ]), 
-  Group([ (1,4,5,3) ]) ]
-gap> Size( cents );
-57
+gap> G := SymmetricGroup( 3 );
+Sym( [ 1 .. 3 ] )
+gap> cent := List( G, x->Centralizer( G, x ));
+[ Group([ (1,3), (2,3) ]), Group([ (2,3) ]), Group([ (1,3) ]), Group([ (1,3,2) ]), 
+  Group([ (1,2,3) ]), Group([ (1,2) ]) ]
+gap> cent[5] = cent[6];
+false
+gap> cent[4] = cent[5];
+true
+gap> cent_set := Set( G, x->Centralizer( G, x ));
+[ Group([ (2,3) ]), Group([ (1,3), (2,3) ]), Group([ (1,2) ]), Group([ (1,3,2) ]), 
+  Group([ (1,3) ]) ]
+gap> Size( cent );
+6
+gap> Size( cent_set );
+5
 ```
-Ou seja, $S_5$ possui 57 centralizadores. Note que usamos a função `Set` que vai devolver um conjunto; ou seja, todo elemento do output será aparece apenas uma vez.
+Ou seja, $S_3$ possui 5 centralizadores. Note que usamos a função `Set` que vai devolver um conjunto; ou seja, todo elemento do output será aparece apenas uma vez.
 
 
 ## Tarefa 3
 
 Escreva uma função `Cent(G)` para computar o conjunto de todos os centralizadores de elementos de um grupo $G$ dado. Use a função `Centralizer(G,x)`. 
+
+FAZER EXEMPLOS SEM SIZE
 
 Sua função deve verificar:
 ```matlab
@@ -141,6 +133,8 @@ Faça uma mudança no seu código e crie uma função `abCent(G)` para computar 
 
 Por fim, o que podemos dizer para o caso de centralizadores não abelianos de elementos?
 
+
+COLOCAR ISOCLINISMO!!!
 <!--
 
 gap> f:=function(g)                               
