--- a/index.qmd
+++ b/index.qmd
@@ -17,10 +17,11 @@ Este material foi preparado para o minicurso de *Álgebra Computacional com GAP*
 - Grupos livres, homomorfismos, Exploração do cubo mágico
 - Grupos de permutação
 - Grupos de matrizes
+- [Carateres de um grupo e a ordem generalizada](genord.qmd)
 - Álgebras de Lie
 - Álgebras associativas
 - Álgebra comutativa
-- Bases de Grobner
+- [Bases de Grobner](groebner1.qmd)
 - Teoria de Galois
-- Teoria de grafos
+- Teoria de grafos (coloração)
   
