--- a/index.qmd
+++ b/index.qmd
@@ -10,15 +10,11 @@ Este material foi preparado para o minicurso de *Álgebra Computacional com GAP*
 - [A Conjetura de Collatz](collatz.qmd)
 - [Números perfeitos, abundantes, e sequências alíquotas](aliquot.qmd)
 - [Criptografia RSA](rsa.qmd)
-- Conceitos básicos com grupos
 - [Uma exploração dos centralizadores](centralizers.qmd)
-- Homomorfismos, automorfismos, etc, de grupos
+- [Homomorfismos, automorfismos, de grupos](semidirect.qmd)
 - [Comutadores de grupos](commutators.qmd)
 - [Grupos livres, homomorfismos, Exploração do cubo mágico](cubo.qmd)
-- Grupos de permutação
-- Grupos de matrizes
 - [Carateres de um grupo e a ordem generalizada](genord.qmd)
-- Álgebras de Lie
 - [Álgebras associativas](algebras.qmd)
 - Álgebra comutativa
 - [Bases de Grobner](groebner1.qmd)
