--- a/ling.qmd
+++ b/ling.qmd
@@ -5,7 +5,7 @@ lang: pt-BR
 ---
 
 
-## Expressões `if-then-else`
+## Expressões `if-then-else` {#sec-if}
 
 A expressão `if-then` está usada quando queremos executar instruções de acordo com alguma condição que pode ser verdadeira ou falsa. Considere o seguinte exemplo:
 ```python
@@ -44,7 +44,8 @@ gap> a;
 4
 ```
 
-## Laço `for`
+## Laço `for` {#sec-for}
+
 Usamos `for` quando queremos executar a mesma peça de código várias vezes. Por exemplo, queremos calcular o quadrado dos números entre `1` e `10`.
 ```matlab
 gap> for i in [1..10] do
@@ -72,7 +73,7 @@ Observamos os seguintes regras importantes:
 O ciclo executa o código entre as palavras `do` e `od` para todo valor `i` na lista que aparece depois da palavra `in`.
 
 
-## Laço `while`
+## Laço `while` {#sec-while}
 
 Uma outra maneira de criar um laço é usar a construção com `while`. Considere o seguinte exemplo.
 ```matlab 
@@ -102,7 +103,7 @@ As regras de construir este tipo de laço são as seguintes:
 Note que no laço `while` o valor da variável `i` precisa ser incrementado manualmente.
 
 
-## Laço `repeat`
+## Laço `repeat` {#sec-repeat}
 
 O terceiro tipo de laço pode ser construída com a palavra `repeat`. Considere o seguinte exemplo:
 
@@ -149,3 +150,62 @@ gap> repeat
 > until i >= 10;
 O quadrado de 11 é 121
 ```
+
+## Funções {#sec-functions}
+
+Funções em ```GAP``` podem ser usadas para realizar computações que queremos fazer várias vezes com diferentes objetos. Por exemplo a função que, dado ```x``` computa ```3*x+1``` pode ser definida de duas maneiras diferentes.
+```matlab
+gap> f1 := function( x )
+> return 3*x+1;
+> end;
+function( x ) ... end
+gap> f1( 5 );
+16
+```
+```matlab
+gap> f2 := x -> 3*x + 1;
+function( x ) ... end
+gap> f2( -2 );
+-5
+gap> f1 = f2;
+false
+# As funções f1 e f2 fazem a mesma coisa, mas são objetos distintos
+```
+
+Nos exemplos anteriores, a função não precisa de variáveis adicionais para executar sua tarefa. Isso pode acontecer com funções simples, mas uma função mais complicada pode precisar introduzir as suas próprias variáveis, chamadas de *variáveis locais*. Considere a seguinte implementação do exemplo em cima.
+```matlab
+gap> f3 := function( x )
+> local y;
+> y := 3*x;
+> return y+1;
+> end;
+function( x ) ... end
+gap> f3(4);
+13
+gap> y;
+Error, Variable: 'y' must have a value
+not in any function at *stdin*:44
+```
+As últimas linhas do exemplo anterior mostram que o variável ```y``` não está visível fora da função. Isso permite que variáveis com o mesmo nome sejam usadas em várias funções sem que sejam confundidas. O mesmo também impede que a varíavel local ```y``` definida dentro da função ```f3``` seja confundida com uma possível variável global também chamada de ```y```. O seguinte código mostra que o nome `y` tem significado diferente dentro e fora da função. 
+```matlab
+gap> f3 := function( x )
+> local y;
+> y := 3*x;
+> Print( "O valor de y é ", y, "\n" );
+> return y+1;
+> end;
+function( x ) ... end
+gap> y := -5;
+-5
+gap> f3(10);
+O valor de y é 30
+31
+gap> y;
+-5
+```
+
+## Break e continue {#sec-break-continue}
+
+
+A ser escrito 
+
